# afs

./: AFS.pro  CMakeLists.txt  README.md
cuda/: binarization.cu  binarization.cuh  cutil5.cuh  segmentation.cu  segmentation.cuh
doc/: Doxyfile
doc/html/: _dataset_8hpp_source.html  _feature_8hpp_source.html  _image_8hpp_source.html  _image_proc_8hpp_source.html  _learning_8hpp_source.html  _model_8hpp_source.html  _optimization_8hpp_source.html  _potential_8hpp_source.html  annotated.html  class_color_features-members.html  class_color_features.html  class_color_features__coll__graph.map  class_color_features__coll__graph.md5  class_color_features__inherit__graph.map  class_color_features__inherit__graph.md5  class_color_features_a345f8c5e4a0c882228137749f74760e0_cgraph.map  class_color_features_a345f8c5e4a0c882228137749f74760e0_cgraph.md5  class_corel-members.html  class_corel.html  class_corel__coll__graph.map  class_corel__coll__graph.md5  class_corel__inherit__graph.map  class_corel__inherit__graph.md5  class_cv_r_trees_multi_class-members.html  class_cv_r_trees_multi_class.html  class_cv_r_trees_multi_class__coll__graph.map  class_cv_r_trees_multi_class__coll__graph.md5  class_cv_r_trees_multi_class_a186472e5e48eef409823f2bcfd3453ed_icgraph.map  class_cv_r_trees_multi_class_a186472e5e48eef409823f2bcfd3453ed_icgraph.md5  class_dataset.html  (+353 more)
include/: Dataset.hpp  Feature.hpp  Image.hpp  ImageProc.hpp  Learning.hpp  Model.hpp  Optimization.hpp  Potential.hpp  common.hpp  main.hpp
misc/: edgeDetectionFct.cpp
src/: Dataset.cpp  Feature.cpp  Image.cpp  ImageProc.cpp  KMeansClustering.cpp  Learning.cpp  Model.cpp  Optimization.cpp  Potential.cpp  main.cpp
(+75 files in other folders)
